Fix overflow issue and revamp shop detail styling
Let me know if you don't like the scss changes I've made, I tried my best to respond to the critiques that Eli had while still retaining the same overall feel for the page

--- a/client/src/components/main/coffee_shop/CoffeeShop.scss
+++ b/client/src/components/main/coffee_shop/CoffeeShop.scss
@@ -10,76 +10,97 @@
 .coffee-shop {
   display: flex;
   flex-direction: column;
-  height:60%;
+  padding: 0 20px 0 20px;
+  height: 60%;
   position: relative;
-}
-
-.coffee-shop > img {
-  margin: 0 auto;
-  width: 75%;
-  height: 35%;
-  border-radius: 10px;
-  box-shadow: 1px 2px 5px gray;
-  position: relative;
+  img, .coffee-section-container {
+    object-fit: cover;
+    margin: 0 0 0 0;
+    width: 100%;
+    height: 35%;
+    box-shadow: 1px 2px 5px gray;
+    position: relative;
+  }
 }
 
 .coffee-shop-info {
-  width: 80%;
-  margin: 0 auto;
+  width: 100%;
+  margin: 0 0;
   display: flex;
   justify-content: space-between;
-  padding: 20px
+  flex-wrap: wrap;
+  margin-top: 20px;
+  padding: 20px;
+}
+
+.shop-edit {
+  justify-content: space-evenly;
+  margin-right: 25px;
+  font-size: 16px;
+  a {
+    text-decoration: none;
+    color: $primary-dark;
+    &:hover {
+      color: $primary;
+    }
+  }
 }
 
 .coffee-shop-main-info {
-  margin-left: 20px
-}
-
-.coffee-shop-main-info h1 {
-  font-size: 30px;
-  margin-bottom: 10px;
-  font-weight: bold;
-  margin-top: 20px;
-}
-
-.coffee-shop-main-info h3 {
-  font-size: 16px;
-  line-height: 1.5;
+  width: 400px;
+  h1 {
+    font-size: 30px;
+    margin-bottom: 10px;
+    font-weight: bold;
+  }
+  h3 {
+    font-size: 16px;
+    line-height: 1.5;
+  }
 }
 
 .favorite-icon {
   position: absolute;
   z-index: 10;
-  right: 13%;
+  right: 8%;
   cursor: pointer;
+  a {
+    display: block;
+    height: 100%;
+  }
   img {
-    height: 50px;
+    height: 45px;
+    width: 45px;
+    box-shadow: none;
+    @media only screen and (min-width: 850px) {
+      height: 50px;
+      width: 50px;
+    }
+  }
+  @media only screen and (min-width: 1000px) {
+    right: 2%;
   }
 }
 
 .coffee-shop-description {
-  margin: 0 auto;
+  margin: 0 20px;
   width: 80%;
-  padding-left:40px;
   margin-top:20px;
-  margin-bottom: 20px;;
-}
-
-.coffee-shop-description h1 {
-  font-size: 20px;
   margin-bottom: 20px;
-}
-
-.coffee-shop-description p {
-  font-size: 16px;
-  padding-bottom: 20px;
-  line-height: 1.5;
+  h1 {
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
+  p {
+    font-size: 16px;
+    padding-bottom: 20px;
+    line-height: 1.5;
+  }
 }
 
 .coffee-shop-details {
   width: 80%;
-  margin:0 auto;
-  padding-left: 40px;
+  margin: 0 0 0 30px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -100,23 +121,10 @@
 
 .coffee-section-container {
   width: 80%;
-  height: 750px;
-  margin-left:95px;
+  height: auto;
   background: $primary-light;
-  padding:20px;
-  border-radius: 10px;
+  padding: 0 20px 20px 20px;
+  margin-left: 20px;
   margin-bottom: 30px;
-}
-
-.shop-edit {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  margin-right:50px
-}
-
-.shop-edit a {
-  text-decoration: none;
-
 }
 
